gachi-3tier/testyaml/was.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: was 
  name: was
spec:
  replicas: 1
  selector:
    matchLabels:
      app: was
  template:
    metadata:
      labels:
        app: was
    spec:
      containers:
      - image: tomcat
        name: was
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: 100m
            memory: 50Mi
