gachi-3tier/testyaml/was-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: was
  name: was
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: was
  type: ClusterIP
  clusterIP: 172.20.100.10
  sessionAffinity: ClientIP
