gachi-3tier/testyaml/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-host-basic
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
  - host: web.losoveyoon.shop
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: web
            port:
              number: 80
  - host: was.losoveyoon.shop
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: was
            port:
              number: 8080
